correção d bugs do efeito de bg

--- a/css/animações.scss
+++ b/css/animações.scss
@@ -5,6 +5,7 @@ pra manter o sistema organizado*/
 :root {
     --color-white: #fff;
     --color-transp: #ffffff00;
+    --color-light: #f8f9fa;
 }
 @keyframes written_tex { //Texto aparece cor branca
     100% { color: var(--color-white); }
