--- a/css/bgindex.scss
+++ b/css/bgindex.scss
@@ -1,3 +1,5 @@
+@import './cores.scss';
+
 @mixin sp-layout {
     @media screen and (max-width: 750px) {
       @content;
@@ -23,6 +25,7 @@
     width: 100%;
     height: 120%;
     transform: rotate(-45deg);
+    z-index: -1;
   }
   
   .star {
